Can get dependencies to the client
